# CogniForge

./: .gitignore  README.md  autotsad.yaml  config.ini  pyproject.toml
DataGenerator_and_NeuralNetwork/DataGen/DataGen/: config.yaml  configExample.yaml  requirements.txt
DataGenerator_and_NeuralNetwork/DataGen/DataGen/dataGen/: __main__.py
DataGenerator_and_NeuralNetwork/Neural_Network/: __main__.py  requirements.txt
DataGenerator_and_NeuralNetwork/Neural_Network/myenv/: pyvenv.cfg
DataGenerator_and_NeuralNetwork/Neural_Network/myenv/Scripts/: activate  activate.bat
Data_Preprocessing/: Time_Series_Data.py
Wire_Quality/: Wire_Quality.py
algorithms/: anomaly_detection.py
cogniforge/: Home.py  Photo.py  QUESTIONS TO INQUIRE AFTER.txt  README.md  Restructure Wire Quality.txt  config.py  main.py  pyproject.toml
cogniforge/Data_Preprocessing/: Time_Series_Data.py
cogniforge/FFT_Analysis/: FFT_Analysis.py  anomaly_detection.py
cogniforge/Wire_Quality/: Wire_Quality.py
cogniforge/algorithms/: anomaly_detection.py
cogniforge/data_preparation/: cleaning.py
cogniforge/data_preprocessing/: Time_Series_Data.py
cogniforge/layer_quality/: Layer_Thickness.py
cogniforge/pages/: 1_🔌_Wire_Quality.py  2_🗻_Roughness.py  3_Wire_Quality.py  3_💦_Layer_Thickness.py  4_Roughness.py  4_⛓️_Rust.py  6_Layer_Thickness.py
cogniforge/pages/2_wire_quality/: Wire_Quality.py
cogniforge/pages/4_layer_quality/: Layer_Thickness.py
cogniforge/steel_quality/: Roughness.py  RoughnessInference.py  RoughnessTraining.py  Rust.py  RustInference.py  RustTraining.py  TrainingTab.py  widgets.py
cogniforge/utils/: config.py  data_analysis.py  dataloader.py  detrending.py  downsampling.py  furthr.py  http_cache.py  ml.py  object_select_box.py  plot_data.py  plotting.py  session_state_management.py  smoothing.py  state_button.py  ui.py  upload_analyzed_data.py
cogniforge/wire_quality/: Wire_Quality.py
steel_quality/: Roughness.py
utils/: data_analysis.py  dataloader.py  detrending.py  furthr.py  plotting.py  smoothing.py  upload_analyzed_data.py
