[tool.poetry]
name = "cogniforge"
version = "0.1.0"
description = ""
authors = ["wenig <phillip.wenig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
streamlit = "^1.32.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
lttb = "^0.3.1"
scikit-learn = "^1.4.1.post1"
furthrmind = "^0.1b5"
tensorflow = "~2.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
