[tool.poetry]
name = "cogniforge"
version = "0.1.0"
description = ""
authors = ["wenig <phillip.wenig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
streamlit = "^1.34.0"
requests = "^2.31.0"
lttb = "^0.3.1"
scikit-learn = "~1.2.0"
furthrmind = "0.1.13"
plotly = "^5.24.1"
tensorflow = { version = "~2.21", extras = ["and-cuda"] }
autotsad = { git = "https://github.com/UMR-Big-Data-Analytics/AutoTSAD.git", branch = "autotsad-cogniforge" }

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.12"

[tool.ruff]
line-length = 120
include = ["pyproject.toml", "cogniforge/steel_quality/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
