[tool.poetry]
name = "cogniforge"
version = "0.1.0"
description = ""
authors = ["wenig <phillip.wenig@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.32.0"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
lttb = "^0.3.1"
scikit-learn = "^1.4.1.post1"
furthrmind = "^0.1b5"
optuna = "^4.1.0"
hydralit-components = "^1.0.10"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
